added media queries to make the page responsive

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="utf-8" />
+
 		<link
 			rel="apple-touch-icon"
 			sizes="180x180"
@@ -21,6 +23,10 @@
 		<link
 			rel="manifest"
 			href="assets/favicon/site.webmanifest"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap"
+			rel="stylesheet"
 		/>
 		<link
 			href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap"
